--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Навігаційні таблиці</title>
+    <title>Навігаційні таблиці про навігацію і таблиці на сайті</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -94,7 +94,7 @@
                     </li>
                     <li>
                         <a href="#">Холодильник</a>
-                        <ul class="open_5">
+                        <ul class="open open_5">
                             <li>
                                 <a href="#">Морозильна камера</a>
                             </li>
@@ -103,7 +103,7 @@
                             </li>
                             <li class="cadre">
                                 <a href="#">4-х камері</a>
-                                <ul class="open_6">
+                                <ul class="open open_6">
                                     <li>
                                         <a href="#">Суха заморозка</a>
                                     </li>
@@ -115,7 +115,7 @@
                                     </li>
                                     <li class="cheep">
                                         <a href="#">Дешеві</a>
-                                        <ul class="open_7">
+                                        <ul class="open open_7">
                                             <li>
                                                 <a href="#">Саморобні</a>
                                             </li>
@@ -162,7 +162,7 @@
                     </li>
                     <li class="service-li">
                         <a href="#">Наші послуги</a>
-                        <ul class="service">
+                        <ul class="open service">
                             <li><a href="#">Видоїти корову</a></li>
                             <li><a href="#">Випасти свиню</a></li>
                             <li><a href="#">Принести води</a></li>
@@ -171,9 +171,9 @@
                             <li><a href="#">Крамниця товарів</a></li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="neighborhood">
                         <a href="#">Краєвид околиці</a>
-                        <ul class="neighborhood">
+                        <ul class="open open_8">
                             <li><a href="#">Річка</a></li>
                             <li><a href="#">Вікно у поле</a></li>
                             <li><a href="#">Зелена пшениця</a></li>
