--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a href="#">Крабові палочки</a>
                         <ul class="open">
                             <li>
-                                <a href="#">Водяний</a>
+                                <a href="#">Водяний світ</a>
                             </li>
                             <li>
                                 <a href="#">На вагу</a>
