--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <li>
                         <a href="#">Телефон</a>
                     </li>
-                    <li>
+                    <li class="hover">
                         <a href="#">Холодильник</a>
                         <ul class="open open_5">
                             <li>
@@ -101,7 +101,7 @@
                             <li>
                                 <a href="#">2-х камерні</a>
                             </li>
-                            <li class="cadre">
+                            <li class="cadre hover">
                                 <a href="#">4-х камері</a>
                                 <ul class="open open_6">
                                     <li>
@@ -113,7 +113,7 @@
                                     <li>
                                         <a href="#">Середня заморозка</a>
                                     </li>
-                                    <li class="cheep">
+                                    <li class="cheep hover">
                                         <a href="#">Дешеві</a>
                                         <ul class="open open_7">
                                             <li>
@@ -202,15 +202,14 @@
             <table>
                 <thead>
                     <tr>
-                        <th rowspan="2">№</th>
-                        <th rowspan="2">Ім’я</th>
-                        <th colspan="3">Результати</th>
+                        <th rowspan="2" class="nomer">№</th>
+                        <th rowspan="2" class="name">Ім’я</th>
+                        <th colspan="3" class="result">Результати</th>
                     </tr>
                     <tr class="years">
                         <th>2016</th>
                         <th>2017</th>
-                        <th>2018</th>
-                    </tr>
+                        <th class="text-number">2018</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -277,11 +276,11 @@
         <h3>3. Таблиця стилями</h3>
         <div class="table-style">
             <div class="row">
-                <p class="cell">№</p>
+                <p class="cell-number">№</p>
                 <p class="cell">Назва товару</p>
                 <p class="cell center">CPU</p>
                 <p class="cell center">SSD</p>
-                <p class="cell center">GPU</p>
+                <p class="cell-center">GPU</p>
             </div>
             <div class="row">
                 <p class="cell">1.</p>
